# SRS-template

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/backend/: Cargo.toml  Dockerfile
apps/backend/src/: main.rs
apps/frontend/: package-lock.json  package.json
